image slider scrollbar fix

--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -25,6 +25,8 @@
   scroll-snap-type: x mandatory;
   position: relative;
   z-index: 1;
+  scrollbar-width: none;
+  cursor: grab;
 }
 
 .image-track {
